Bug 387781 - Unable to reconcile, KMyMoney segfaults
Summary: Unable to reconcile, KMyMoney segfaults
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-12-10 19:03 UTC by Alexandre
Modified: 2017-12-11 08:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch for the reconcile segfault (951 bytes, patch)
2017-12-10 19:03 UTC, Alexandre
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandre 2017-12-10 19:03:06 UTC
Created attachment 109300 [details]
Patch for the reconcile segfault

Compiling from master (git commit 025388d54a2642435da00fa9949b9650da1ed75a).
Kmymoney segfaults when entering "Reconcile". 
The ui is not being setup so the field d->ui->m_statementInfoPageCheckings is null and the line d->ui->m_statementInfoPageCheckings->ui->m_enterInformationLabel->setText(QString("<qt>") + i18n("Please enter the following fields with the information as you find them on your statement. Make sure to enter all values in <b>%1</b>.", currency.name()) + QString("</qt>")); sefaults.
The attached patch seems to fix it.
Comment 1 Thomas Baumgart 2017-12-11 08:00:07 UTC
Git commit 8cf14efc21e4b31eab710d76a4e4dc686ac3ab7f by Thomas Baumgart.
Committed on 11/12/2017 at 07:59.
Pushed by tbaumgart into branch 'master'.

Add missing UI initialization

Thanks to Alexandre for reporting and providing a hint how to fix it.

M  +1    -0    kmymoney/wizards/endingbalancedlg/kendingbalancedlg.cpp

https://commits.kde.org/kmymoney/8cf14efc21e4b31eab710d76a4e4dc686ac3ab7f