Add missing UI initialization

Thanks to Alexandre for reporting and providing a hint how to fix it.

BUG: 387781